# webhook-server

./: .gitignore  .travis.yml  Cargo.toml  README.md  narnia.toml
docs/: hook1.sh  hook2.sh
examples/: boxxy.rs
src/: args.rs  child.rs  config.rs  http.rs  lib.rs  main.rs  parent.rs
src/sandbox/: ipc.rs  mod.rs  seccomp.rs  syscalls.rs
