[package]
name = "narnia"
version = "0.1.0"
description = "Multiprocess sandboxed webhook daemon"
authors = ["kpcyrd <git@rxv.cc>"]
license = "AGPL-3.0"
repository = "https://github.com/kpcyrd/narnia"
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/narnia" }

[dependencies]
tk-http= "0.3.8"
tk-listen= "0.1"
env_logger = "0.5"
log = "0.4"
tokio-core = "0.1"
futures = "0.1"
error-chain = "0.11"
toml = "0.4"
ipc-channel = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reduce = "0.1"
clap = "2"
libc = "0.2"

[target.'cfg(target_os="linux")'.dependencies]
seccomp-sys = "0.1.2"

[dev-dependencies]
boxxy = "0.4"
